--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,2 +1,13 @@
+
+<footer class="bd-footer text-muted">
+<div class="col-xs-12" style="height:50px;"></div>
+  <div class="align-bottom">
+    <p style="font-size: 12px" class="text-center  bg-dark text-white">
+      Edit this site by submitting Pull Requests to the <a href=https://github.com/HEP-FCC/FCCSW/tree/gh-pages> Github repository </a>.
+    </p>
+    
+  </div>
+</footer>
+
 <script src="{{ site.url }}{{site.baseurl}}/node_modules/jquery/dist/jquery.min.js"></script>
 <script src="{{ site.url }}{{site.baseurl}}/node_modules/bootstrap-sass/assets/javascripts/bootstrap.min.js"></script>
