--- a/_layouts/title.html
+++ b/_layouts/title.html
@@ -8,7 +8,7 @@
         {% include header.html %}
         <div class='container'>
             <div class='jumbotron'>
-              <h1 style="font-family: monospace">{{ site.title | escape }} <img width="30%"
+              <h1 style="font-family: monospace">{{ site.title | escape }} <img width="30%" style="float: right;"
               src="https://fcc.web.cern.ch/Logo/Portable%20Network%20Graphics%20(PNG)/logo-FCC-01.png"
               /></h1>
               <p>{{ page.subtitle | default: site.description | strip_html | normalize_whitespace | truncate: 100 | escape }}</p>
