Updating FCC logo

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -2,7 +2,11 @@
    <nav class="navbar navbar-expand-lg fixed-top navbar-dark bg-dark">
       <div class="container">
           <a class="navbar-brand"
-             href="{{ site.baseurl | prepend: site.url }}/index.html">FCCSW</a>
+             href="{{ site.baseurl | prepend: site.url }}/index.html">
+            <img src="https://fcc.web.cern.ch/sites/default/themes/fcc/img/fcc_logo_light.png"
+                 alt=""
+                 height=40>
+          </a>
           <button type="button"
                   class="navbar-toggler"
                   data-bs-toggle="collapse"
