--- a/_layouts/geo.html
+++ b/_layouts/geo.html
@@ -21,7 +21,9 @@
       <div class="col-md-12 border rounded">
         {{ content }}
       </div>
-      Details on the DD4hep implementations of the detector geometries can be found on <a href="https://github.com/HEP-FCC/FCCSW/blob/master/Detector/doc/DD4hepInFCCSW.md ">github.</a>
+      Details on the DD4hep implementations of the detector geometries can be
+      found on
+      <a href="https://github.com/HEP-FCC/FCCDetectors/blob/main/doc/DD4hepInFCCSW.md">GitHub</a>.
     {% include footer.html %}
 
   </body>
