Fixing stray div in footer

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,10 +1,11 @@
-<footer class="text-muted">
-    <div class="row" style="height:50px;"></div>
-        <p style="font-size: 12px" class="text-center">
-            Edit this site by submitting Pull Requests to the <a href=https://github.com/HEP-FCC/FCCSW/tree/gh-pages> Github repository </a>.
+<footer>
+    <div class="row mt-5">
+        <p class="text-center text-muted text-footer">
+            Edit this site by submitting Pull Requests to the
+            <a href=https://github.com/HEP-FCC/FCCSW/tree/gh-pages>Github repository</a>.
         </p>
     </div>
 </footer>
 
-<script src="{{ site.url }}{{site.baseurl}}/js/jquery-3.6.0.min.js"></script>
-<script src="{{ site.url }}{{site.baseurl}}/js/bootstrap.bundle.min.js"></script>
+<script src="{{ site.url }}{{ site.baseurl }}/js/jquery-3.6.0.min.js"></script>
+<script src="{{ site.url }}{{ site.baseurl }}/js/bootstrap.bundle.min.js"></script>
