Adding link to FCC version of Phoenix

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -43,6 +43,8 @@
                              href="{{ site.baseurl | prepend: site.url }}/geo/geo.html">FCC-hh</a>
                           <a class="dropdown-item{% if page.id == 'geo-ee' %} active{%endif%}"
                              href="{{ site.baseurl | prepend: site.url }}/geo/geo-ee.html">FCC-ee IDEA</a>
+                          <a class="dropdown-item"
+                             href="https://fccsw.web.cern.ch/fccsw/phoenix">Phoenix</a>
                       </div>
                   </li>
               </ul>
