--- a/_includes/header.html
+++ b/_includes/header.html
@@ -35,7 +35,10 @@
                       <a class="nav-link"
                          href="https://fccsw.web.cern.ch/fccsw/phoenix">Event Display</a>
                   </li>
-              </ul>
+                  <li class="nav-item">
+                    <a class="nav-link{% if page.id == 'opportunities' %} active{%endif%}" href="{{ site.baseurl | prepend: site.url }}/opporinities/opportunities.html">Opportunities</a>
+                </li>
+            </ul>
           </div>
       </div>
     </nav>
