--- a/_includes/permalinks.html
+++ b/_includes/permalinks.html
@@ -1,6 +1,6 @@
     <div class="card">
         <div class="card-header">
-            <h4>External links</h4>
+            <h4>Quick links</h4>
         </div>
         <ul class="list-group list-group-flush">
         {% for link in site.data.permalinks %}
