--- a/_layouts/error.html
+++ b/_layouts/error.html
@@ -6,13 +6,13 @@
     <body>
 {% include header.html %}
 
-        <div class="container">
+        <article class="container mt-5">
             <div class="p-3 mb-4 rounded-3 bg-dark bg-opacity-10">
                 <div class="container-fluid py-3">
 {{ content }}
                 </div>
             </div>
-        </div>
+        </article>
 
 {% include footer.html %}
     </body>
