--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,11 +1,11 @@
 <footer class="navbar bg-body-tertiary mt-5">
     <div class="container-lg">
         <div class="mt-3 container-lg text-center">
-            <p class="text-muted text-footer">
+            <small class="text-muted text-footer">
                 Edit this site by submitting Pull Request(s) to the<br>
                 <a class="link-underline link-underline-opacity-0 link-underline-opacity-75-hover"
                   href=https://github.com/HEP-FCC/FCCSW/tree/gh-pages>Github repository</a>.
-            </p>
+            </small>
         </div>
 
         <div class="mt-3 container-lg text-center">
