--- a/_layouts/main.html
+++ b/_layouts/main.html
@@ -6,15 +6,16 @@
     <body>
 
         {% include header.html %}
-        <div class="container">
+        <article class="container mt-5">
             <div class="p-3 mb-4 rounded-3 bg-dark bg-opacity-10">
                 <div class="container-fluid py-3">
                     <div class="row align-items-center">
-                        <div class="col-md-5 order-md-2 mb-5 mb-md-0">
-                            <img class="img-fluid float-md-end"
+                        <div class="col-lg-5 order-lg-2 mb-5 mb-lg-0">
+                            <img class="img-fluid float-lg-end mx-auto d-block"
+                                 alt="Future Circular Collider"
                                  src="{{ '/assets/img/logo-dark.png' | prepend: site.baseurl | prepend: site.url }}">
                         </div>
-                        <div class="col-md-7 order-md-1">
+                        <div class="col-lg-7 order-lg-1">
                             <h1 class="font-monospace fcc-logo">{{ site.title | escape }}</h1>
                             <p>{{ page.subtitle | default: site.description | strip_html | normalize_whitespace | truncate: 100 | escape }}</p>
                         </div>
@@ -26,9 +27,15 @@
                 <div class="col-lg-9">
                     {{ content }}
                 </div>
-                <div class="col-lg-3">{% include permalinks.html %}</div>
+                <div class="col-lg-3">
+                  <p class="h3">FCC Software Meetings</p>
+                  <div class="ratio ratio-fccsw-meetings">
+                    <iframe src="https://fccsw.web.cern.ch/fccsw-meetings/"
+                            title="FCC Software Meetings"></iframe>
+                  </div>
+                </div>
             </div>
-        </div>
+        </article>
         {% include footer.html %}
 
     </body>
