--- a/_sass/base.scss
+++ b/_sass/base.scss
@@ -1,140 +1,54 @@
 @charset "utf-8";
 
-/* path to glyphicons */
-/* $icon-font-path: "../node_modules/bootstrap-sass/assets/fonts/bootstrap/"; */
+/*
+  Custom variables.
+  Any bootstrap style customization must be before the bootstrap import
+*/
+$gray-base:              #000 !default;
+$gray-lighter:           lighten($gray-base, 93.5%) !default;
+$list-group-border:      #ddd !default;
+$border-radius-base:        4px !default;
+$list-group-border-radius:      $border-radius-base !default;
 
-/* @import "bootstrap-5.3.3/assets/stylesheets/bootstrap"; */
-/* @import "bootstrap/bootstrap"; */
 
+@import "bootstrap-5.3.3/bootstrap";
 
-
-.list-group-header {
-  position: relative;
-  display: block;
-  padding: 3px 15px;
-  // Place the border on the list items and negative margin up for better styling
-  margin-bottom: -1px;
-  background-color: $gray-lighter;
-  border: 1px solid $list-group-border;
-
-  // Round the first and last items
-  @include border-top-radius($list-group-border-radius);
-}
 
 body {
   font-size: 14pt;
-  margin-top: 100px;
+  // margin-top: 100px;
+  display: flex;
+  flex-direction: column;
+  min-height: 100vh;
 }
 
-blockquote {
-  font-size: 13pt;
+article {
+  flex-grow: 1;
+  margin-bottom: 4rem;
 }
-/* offset the anchors for interal links */
-:target:before {
-  content:"";
-  display:block;
-  height:60px; /* fixed header height*/
-}
+
+article a:link { text-decoration: none; }
+article a:visited { text-decoration: none; }
+article a:hover { text-decoration: underline; }
+article a:active { text-decoration: underline; }
 
 .fcc-logo {
-  font-size: 9vw;
+  font-size: 8vw;
 }
 @include media-breakpoint-up(lg) {
   .fcc-logo {
-    font-size: 7vw;
+    font-size: 6vw;
   }
 }
 @include media-breakpoint-up(xxl) {
   .fcc-logo {
-    font-size: 5vw;
+    font-size: 4vw;
   }
 }
 
-.text-footer {
-  font-size: .7em;
+.ratio-fccsw-meetings {
+  --bs-aspect-ratio: 80%;
+  @include media-breakpoint-up(lg) {
+    --bs-aspect-ratio: 220%;
+  }
 }
-
-/* syntax highlighting from: https://github.com/richleland/pygments-css/blob/master/github.css */
-code.highlighter-rouge {background-color: #fcfcfc;color:#555;}
-/* http://jsfiddle.net/hdy44/3/ */
-pre {
-  background-color: $light;
-  border-radius: 5px;
-  border: 1px solid #bcbec0;
-  padding: 5px;
-  font-size: small;
-}
-code {
-  background-color: $light;
-  border-radius: 5px;
-  border: 1px solid #bcbec0;
-  padding: 2px;
-  font-size: small;
-}
-pre code {
-  border-radius: 0px;
-  border: 0px;
-  padding: 5px;
-  font-size: small;
-}
-.highlight .hll { background-color: #ffffcc }
-.highlight .c { color: #999988; font-style: italic } /* Comment */
-.highlight .err { color: #a61717; background-color: #e3d2d2 } /* Error */
-.highlight .k { color: #000000; font-weight: bold } /* Keyword */
-.highlight .o { color: #000000; font-weight: bold } /* Operator */
-.highlight .cm { color: #999988; font-style: italic } /* Comment.Multiline */
-.highlight .cp { color: #999999; font-weight: bold; font-style: italic } /* Comment.Preproc */
-.highlight .c1 { color: #999988; font-style: italic } /* Comment.Single */
-.highlight .cs { color: #999999; font-weight: bold; font-style: italic } /* Comment.Special */
-.highlight .gd { color: #000000; background-color: #ffdddd } /* Generic.Deleted */
-.highlight .ge { color: #000000; font-style: italic } /* Generic.Emph */
-.highlight .gr { color: #aa0000 } /* Generic.Error */
-.highlight .gh { color: #999999 } /* Generic.Heading */
-.highlight .gi { color: #000000; background-color: #ddffdd } /* Generic.Inserted */
-.highlight .go { color: #888888 } /* Generic.Output */
-.highlight .gp { color: #555555 } /* Generic.Prompt */
-.highlight .gs { font-weight: bold } /* Generic.Strong */
-.highlight .gu { color: #aaaaaa } /* Generic.Subheading */
-.highlight .gt { color: #aa0000 } /* Generic.Traceback */
-.highlight .kc { color: #000000; font-weight: bold } /* Keyword.Constant */
-.highlight .kd { color: #000000; font-weight: bold } /* Keyword.Declaration */
-.highlight .kn { color: #000000; font-weight: bold } /* Keyword.Namespace */
-.highlight .kp { color: #000000; font-weight: bold } /* Keyword.Pseudo */
-.highlight .kr { color: #000000; font-weight: bold } /* Keyword.Reserved */
-.highlight .kt { color: #445588; font-weight: bold } /* Keyword.Type */
-.highlight .m { color: #009999 } /* Literal.Number */
-.highlight .s { color: #d01040 } /* Literal.String */
-.highlight .na { color: #008080 } /* Name.Attribute */
-.highlight .nb { color: #0086B3 } /* Name.Builtin */
-.highlight .nc { color: #445588; font-weight: bold } /* Name.Class */
-.highlight .no { color: #008080 } /* Name.Constant */
-.highlight .nd { color: #3c5d5d; font-weight: bold } /* Name.Decorator */
-.highlight .ni { color: #800080 } /* Name.Entity */
-.highlight .ne { color: #990000; font-weight: bold } /* Name.Exception */
-.highlight .nf { color: #990000; font-weight: bold } /* Name.Function */
-.highlight .nl { color: #990000; font-weight: bold } /* Name.Label */
-.highlight .nn { color: #555555 } /* Name.Namespace */
-.highlight .nt { color: #000080 } /* Name.Tag */
-.highlight .nv { color: #008080 } /* Name.Variable */
-.highlight .ow { color: #000000; font-weight: bold } /* Operator.Word */
-.highlight .w { color: #bbbbbb } /* Text.Whitespace */
-.highlight .mf { color: #009999 } /* Literal.Number.Float */
-.highlight .mh { color: #009999 } /* Literal.Number.Hex */
-.highlight .mi { color: #009999 } /* Literal.Number.Integer */
-.highlight .mo { color: #009999 } /* Literal.Number.Oct */
-.highlight .sb { color: #d01040 } /* Literal.String.Backtick */
-.highlight .sc { color: #d01040 } /* Literal.String.Char */
-.highlight .sd { color: #d01040 } /* Literal.String.Doc */
-.highlight .s2 { color: #d01040 } /* Literal.String.Double */
-.highlight .se { color: #d01040 } /* Literal.String.Escape */
-.highlight .sh { color: #d01040 } /* Literal.String.Heredoc */
-.highlight .si { color: #d01040 } /* Literal.String.Interpol */
-.highlight .sx { color: #d01040 } /* Literal.String.Other */
-.highlight .sr { color: #009926 } /* Literal.String.Regex */
-.highlight .s1 { color: #d01040 } /* Literal.String.Single */
-.highlight .ss { color: #990073 } /* Literal.String.Symbol */
-.highlight .bp { color: #999999 } /* Name.Builtin.Pseudo */
-.highlight .vc { color: #008080 } /* Name.Variable.Class */
-.highlight .vg { color: #008080 } /* Name.Variable.Global */
-.highlight .vi { color: #008080 } /* Name.Variable.Instance */
-.highlight .il { color: #009999 } /* Literal.Number.Integer.Long */
