Using relative_url filter

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -17,5 +17,5 @@
 </footer>
 
 
-<script src="{{ site.url }}{{ site.baseurl }}/assets/js/jquery-3.7.1.min.js"></script>
-<script src="{{ site.url }}{{ site.baseurl }}/assets/js/bootstrap-5.3.3/bootstrap.bundle.min.js"></script>
+<script src="{{ '/assets/js/jquery-3.7.1.min.js' | relative_url }}"></script>
+<script src="{{ '/assets/js/bootstrap-5.3.3/bootstrap.bundle.min.js' | relative_url }}"></script>
