--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -4,13 +4,17 @@
             <small class="text-muted text-footer">
                 Edit this site by submitting Pull Request(s) to the<br>
                 <a class="link-underline link-underline-opacity-0 link-underline-opacity-75-hover"
-                  href=https://github.com/HEP-FCC/FCCSW/tree/gh-pages>Github repository</a>.
+                   href="https://github.com/HEP-FCC/FCCSW/tree/gh-pages"
+                   target="_blank">Github repository</a>.
             </small>
         </div>
 
         <div class="mt-3 container-lg text-center">
             <p class="text-muted text-footer">
-                &copy; Copyright 2024, CERN.
+                &copy; Copyright 2024,
+                <a href="https://home.cern/"
+                   class="link-underline link-underline-opacity-0 link-underline-opacity-75-hover"
+                   target="_blank">CERN</a>.
             </p>
         </div>
     </div>
