Fast sim in the header

--- a/_includes/header.html
+++ b/_includes/header.html
@@ -38,13 +38,18 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link"
+                           href="https://hep-fcc.github.io/fcc-tutorials/main/fast-sim-and-analysis/k4simdelphes/doc/starterkit/FccFastSimDelphes/Readme.html"
+                           target="_blank">Fast Sim</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link"
                            href="https://fcc-ee-detector-full-sim.docs.cern.ch/"
-                           target="_blank">FCC-ee Detector Full Sim</a>
+                           target="_blank">Full Sim and Reco</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link"
                            href="https://hep-fcc.github.io/FCCAnalyses/"
-                           target="_blank">FCCAnalyses</a>
+                           target="_blank">Analysis</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link"
