Putting Physics Events DB to the header as well

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -1,4 +1,4 @@
-<footer class="navbar bg-body-tertiary mt-5">
+<footer class="bg-body-secondary pt-3">
     <div class="container-lg">
         <div class="mt-3 container-lg text-center">
             <small class="text-muted text-footer">
