--- a/_includes/header.html
+++ b/_includes/header.html
@@ -53,6 +53,11 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link"
+                           href="https://fcc-physics-events.web.cern.ch/"
+                           target="_blank">Physics Events DB</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link"
                            href="https://fccsw.web.cern.ch/fccsw/phoenix"
                            target="_blank">Event Display</a>
                     </li>
