Making the copyright text smaller

--- a/_includes/footer.html
+++ b/_includes/footer.html
@@ -10,7 +10,7 @@
         </div>
 
         <div class="mt-3 container-lg text-center">
-            <p class="text-muted text-footer">
+            <p class="text-muted small text-footer">
                 &copy; Copyright 2025,
                 <a href="https://home.cern/"
                    class="link-underline link-underline-opacity-0 link-underline-opacity-75-hover"
