--- a/_includes/header.html
+++ b/_includes/header.html
@@ -1,5 +1,5 @@
 <header>
-    <nav class="navbar navbar-expand-lg sticky-top navbar-dark bg-dark">
+    <nav class="navbar navbar-expand-xxl sticky-top navbar-dark bg-dark">
         <div class="container">
             <a class="navbar-brand"
                href="{{ '' | relative_url }}/">
