FCCSW -> FCC Software

--- a/_layouts/release.html
+++ b/_layouts/release.html
@@ -24,11 +24,11 @@
         <div class="panel panel-default">
           <div class="panel-heading">
             <h4 class="panel-title">
-              FCCSW {{ versiondesc.tag }}
+              FCC Software {{ versiondesc.tag }}
             </h4>
           </div>
           <div class="panel-body">
-            FCCSW {{ versiondesc.version }}
+            FCC Software {{ versiondesc.version }}
             {% if versiondesc.tag != "" %}
               <a href="https://github.com/HEP-FCC/FCCSW/releases/tag/{{ versiondesc.tag }}">github</a> |
               <a href="http://fccsw.web.cern.ch/fccsw/fccsw/{{ versiondesc.version }}/"> doxygen</a>
